Fix T73977, T73825: ignore Python user site-packages directory by default

This goes along with the existing changes to ignore PYTHONPATH by default.
--python-use-system-env now controls both.

Differential Revision: https://developer.blender.org/D6962